// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-card render 1`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card">
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 2`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--bar-left mg-c-card--info">
      <span class="mg-c-card__bar"></span>
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 3`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--fill mg-c-card--info">
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 4`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--bar-left mg-c-card--warning">
      <span class="mg-c-card__bar"></span>
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 5`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--fill mg-c-card--warning">
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 6`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--bar-left mg-c-card--success">
      <span class="mg-c-card__bar"></span>
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 7`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--fill mg-c-card--success">
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 8`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--bar-left mg-c-card--danger">
      <span class="mg-c-card__bar"></span>
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 9`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--danger mg-c-card--fill">
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 10`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--app mg-c-card--bar-left">
      <span class="mg-c-card__bar"></span>
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 11`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--app mg-c-card--fill">
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 12`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--bar-left mg-c-card--info">
      <span class="mg-c-card__bar"></span>
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 13`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--bar-left mg-c-card--warning">
      <span class="mg-c-card__bar"></span>
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 14`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--bar-left mg-c-card--success">
      <span class="mg-c-card__bar"></span>
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 15`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--bar-left mg-c-card--danger">
      <span class="mg-c-card__bar"></span>
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card render 16`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--app mg-c-card--bar-left">
      <span class="mg-c-card__bar"></span>
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card should update classCollection 1`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--bar-left mg-c-card--info">
      <span class="mg-c-card__bar"></span>
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card should update classCollection 2`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--bar-left mg-c-card--warning">
      <span class="mg-c-card__bar"></span>
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card should update classCollection 3`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--bar-left mg-c-card--info">
      <span class="mg-c-card__bar"></span>
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;

exports[`mg-card should update classCollection 4`] = `
<mg-card>
  <template shadowrootmode="open">
    <div class="mg-c-card mg-c-card--fill mg-c-card--info">
      <slot></slot>
    </div>
  </template>
  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
</mg-card>
`;
